Improve charcoal text contrast, fix filter values

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -24,14 +24,14 @@
 
 @other-message-background:      lighten(@screen-background, 9%);
 
-@primary-text:                  #c9c9c9;
+@primary-text:                  #d2d2d2;
 @secondary-text:                darken(@primary-text, 35%);
 @tertiary-text:                 fade(@secondary-text, 60%);
 @link-text:                     lighten(@messenger-blue, 20%);
 
-@primary-text-filter:           brightness(0) invert(0.5);
-@secondary-text-filter:         brightness(0) invert(0.4);
-@tertiary-text-filter:          brightness(0) invert(0.3);
+@primary-text-filter:           brightness(0) invert(0.6);
+@secondary-text-filter:         brightness(0) invert(0.47);
+@tertiary-text-filter:          brightness(0) invert(0.37);
 
 @other-message-text:            #d9d9d9;
 @me-message-text:               fade(black, 80%);
@@ -64,9 +64,9 @@
 @m-tertiary-text:                 fade(@m-secondary-text, 60%);
 @m-link-text:                     lighten(@messenger-blue, 10%);
 
-@m-primary-text-filter:             brightness(0) invert(0.5);
-@m-secondary-text-filter:           brightness(0) invert(0.4);
-@m-tertiary-text-filter:            brightness(0) invert(0.3);
+@m-primary-text-filter:             brightness(0) invert(0.6);
+@m-secondary-text-filter:           brightness(0) invert(0.5);
+@m-tertiary-text-filter:            brightness(0) invert(0.4);
 
 @m-other-message-text:            #e0e0e0;
 @m-me-message-text:               fade(white, 95%);
@@ -99,9 +99,9 @@
 @db-tertiary-text:                 fade(@db-secondary-text, 60%);
 @db-link-text:                     tint(@messenger-blue, 20%);
 
-@db-primary-text-filter:           brightness(0) invert(0.5);
-@db-secondary-text-filter:         brightness(0) invert(0.4);
-@db-tertiary-text-filter:          brightness(0) invert(0.3);
+@db-primary-text-filter:           brightness(0) invert(0.6);
+@db-secondary-text-filter:         brightness(0) invert(0.43);
+@db-tertiary-text-filter:          brightness(0) invert(0.33);
 
 @db-other-message-text:            #e0e0e0;
 @db-me-message-text:               fade(white, 85%);
