--- a/styles/themes_v2.less
+++ b/styles/themes_v2.less
@@ -141,7 +141,7 @@
 }
 
 ._9dls.midnight_theme,
-._9dls.midnight_theme .__fb-light-mode
+._9dls.midnight_theme .__fb-light-mode,
 ._9dls.midnight_theme .__fb-dark-mode {
   // --attachment-footer-background: #F0F2F5;
   // --base-blue: #1877F2;
@@ -263,7 +263,7 @@
 }
 
 ._9dls.deepblue_theme,
-._9dls.deepblue_theme .__fb-light-mode
+._9dls.deepblue_theme .__fb-light-mode,
 ._9dls.deepblue_theme .__fb-dark-mode {
   // --attachment-footer-background: #F0F2F5;
   // --base-blue: #1877F2;
